--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# compiled output
+### Compiled Output ###
 /dist
 /tmp
 /out-tsc
 # Only exists if Bazel was run
 /bazel-out
 
-# dependencies
+### Dependencies ###
 /node_modules
 
-# profiling files
+### Profiling Files ###
 chrome-profiler-events*.json
 
-# IDEs and editors
+### IDEs and Editors ###
 /.idea
 .project
 .classpath
@@ -22,7 +22,7 @@ chrome-profiler-events*.json
 .settings/
 *.sublime-workspace
 
-# IDE - VSCode
+### IDE - VSCode ###
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -30,7 +30,7 @@ chrome-profiler-events*.json
 !.vscode/extensions.json
 .history/*
 
-# misc
+# Miscellaneous ###
 /.angular/cache
 /.sass-cache
 /connect.lock
@@ -41,6 +41,15 @@ yarn-error.log
 testem.log
 /typings
 
-# System Files
+### System Files ###
 .DS_Store
 Thumbs.db
+
+### Yarn 2 ###
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
