--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "packageManager": "yarn@3.1.1",
   "scripts": {
-    "build": "ng build",
+    "build": "yarn build:ng && yarn build:server",
+    "build:ng": "ng build",
+    "build:server": "tsc server.ts --outDir dist",
     "dev": "ng serve",
     "lint": "ng lint",
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node dist/server.js",
     "test": "ng test",
     "watch": "ng build --watch --configuration development"
   },
