--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "express": "^4.17.1",
     "primeicons": "^5.0.0",
     "primeng": "^13.0.0",
     "rxjs": "~7.4.0",
@@ -46,6 +47,7 @@
     "@angular/compiler-cli": "~13.0.0",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
+    "@types/express": "^4.17.13",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
