--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,9 @@
         "createDefaultProgram": true
       },
       "extends": [
+        "plugin:@typescript-eslint/recommended",
+        "prettier/prettier",
+        "plugin:prettier/recommended",
         "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
