chore: update project scripts to change how husky hooks are installed
Resolves: #BZ-Init-0

--- a/package.json
+++ b/package.json
@@ -7,11 +7,9 @@
     "build:ng": "ng build",
     "build:server": "tsc server.ts --outDir dist",
     "dev": "ng serve",
+    "init": "yarn install && husky install",
     "lint": "ng lint",
     "ng": "ng",
-    "postinstall": "husky install",
-    "postpublish": "pinst --enable",
-    "prepublishOnly": "pinst --disable",
     "start": "node dist/server.js",
     "test": "ng test",
     "watch": "ng build --watch --configuration development"
@@ -67,7 +65,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "lint-staged": "^12.1.2",
-    "pinst": "^2.1.6",
     "prettier": "^2.5.0",
     "prettier-eslint": "^13.0.0",
     "stylelint": "^14.1.0",
