feat: create intial layout, flow, page structure, and routing
Resolves: #INIT-0000

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,8 @@
             "prefix": "bz",
             "style": "kebab-case"
           }
-        ]
+        ],
+        "no-console": "error"
       }
     },
     {
