--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,5 +2,13 @@
   "extends": [
     "stylelint-config-standard-scss",
     "stylelint-prettier/recommended"
-  ]
+  ],
+  "rules": {
+    "selector-pseudo-element-no-unknown": [
+      true,
+      {
+        "ignorePseudoElements": ["ng-deep"]
+      }
+    ]
+  }
 }
