--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@apollo/client": "^3.5.6",
+    "apollo-angular": "^2.6.0",
     "express": "^4.17.1",
+    "graphql": "^16.2.0",
     "primeicons": "^5.0.0",
     "primeng": "^13.0.0",
     "rxjs": "~7.4.0",
@@ -52,6 +55,7 @@
     "@types/express": "^4.17.13",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/react": "^17.0.37",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "commitizen": "^4.2.4",
