feat: adds state analysis functionality
Resolves: #INIT-0000

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
   "editor.codeActionsOnSave": {
     "source.organizeImports": true
   },
-  "typescript.enablePromptUseWorkspaceTsdk": true
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "cSpell.words": [
+    "ecomm",
+  ]
 }
