--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,10 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": [
+              "./node_modules/leaflet/dist/leaflet.css",
+              "src/styles.scss"
+            ],
             "scripts": []
           },
           "configurations": {
