--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "apollo-angular": "^2.6.0",
     "express": "^4.17.1",
     "graphql": "^16.2.0",
+    "leaflet": "^1.7.1",
     "primeicons": "^5.0.0",
     "primeng": "^13.0.0",
     "rxjs": "~7.4.0",
@@ -53,7 +54,9 @@
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@types/express": "^4.17.13",
+    "@types/geojson": "^7946.0.8",
     "@types/jasmine": "~3.10.0",
+    "@types/leaflet": "^1.7.8",
     "@types/node": "^12.11.1",
     "@types/react": "^17.0.37",
     "@typescript-eslint/eslint-plugin": "5.3.0",
